2007-09-19  Helmut Eller  <heller@common-lisp.net>

	Remove define-slime-dialect.

	* slime.el (define-slime-dialect): Deleted. Use
	slime-lisp-implementations instead.

	Introduce a slime-start-and-init function.

	* slime.el (slime-start-and-init, slime-lisp-options): New
	functions.
	(slime-start-and-load): Use it.

	Simplify slime-length=.

	* slime.el (slime-length=, slime-length>): No need for vectors.

	Remove explicit support for Scheme mode.

	* slime.el (slime-scheme-mode-hook, slime-shared-lisp-mode-hook)
	Deleted.
	(slime-indentation-update-hooks): New hook.
	(slime-handle-indentation-update): Use it.

	Fix close-connection.

	* swank.lisp (close-connection): Use *log-output* instead of
	*debug-io* (which could be redirected to the to-be-closed
	connection).

2007-09-15  Helmut Eller  <heller@common-lisp.net>

	Let slime-setup load contribs.

	* slime.el (slime-setup): Take a list of contribs to load as
	argument.

	* slime-autoloads.el (slime-setup): Ditto, but delay the actual
	loading until slime is loaded.
	(slime-setup-contribs): New function.

2007-09-15  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-maybe-warn-for-different-source-root): Catch
	returned NIL from `slime-file-name-merge-source-root' if the two
	filenames don't share a common source root. 
	Reported by Frank Goenninger.
	
2007-09-15  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-split-string): New semi-portability function.
	The behaviour of `split-string' changed between Emacs21 and
	Emacs22. Thanks to Christophe Rhodes for reporting this.
	(slime-file-name-merge-source-root): Use `slime-split-string'.
	(slime-highlight-differences-in-dirname): Likewise.

2007-09-14  Helmut Eller  <heller@common-lisp.net>

	Some cleanups for the REPL.

	* slime.el (slime-repl-write-string): Split it up into smaller
	functions.
	(slime-repl-emit, slime-repl-emit-result)
	(slime-emit-string): New functions.

	(slime-repl-save-history): Use prin1 instead of pp.
